force-app/main/default/objects/Mail__c/fields/InHabitant__c.field-meta.xml
<CustomField>
    <fullName>InHabitant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InHabitant</label>
    <referenceTo>InHabitant__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>