force-app/main/default/objects/Mail__c/fields/serialCode__c.field-meta.xml
<CustomField>
    <fullName>serialCode__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>serialCode</label>
    <type>AutoNumber</type>
</CustomField>