force-app/main/default/objects/Mail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>serialCode__c</columns>
    <columns>NAME</columns>
    <columns>DeliveryStatus__c</columns>
    <columns>Fragile__c</columns>
    <columns>Height__c</columns>
    <columns>Weight__c</columns>
    <columns>Width__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>